web5일차 프로젝트

--- a/web/901/실습04/commerce - 공유용/index.html
+++ b/web/901/실습04/commerce - 공유용/index.html
@@ -23,7 +23,7 @@
  <samp class="img_samp"><img class="img_1" src="assets\apparel.jpeg"></samp>
   
  <div class="div_about">
-  <samp ><img  class="img_2" src="assets\apparel2.jpeg"></samp>
+  <samp ><img  class="img_2" src=".\assets\apparel2.jpeg"></samp>
   <div class="div_about_p">
     <h2 class="div_about_p">About Our Company</h2>
     <p class="div_about_p" >Lrem ipsum dolor sit amet consectetur adippisicing elit.Eaque deleniti</p>
@@ -39,22 +39,22 @@
   <h2 class="more_h2">More</h2>
   <div class="more_img_div">
     <samp class="more_p">
-      <img class="more_img" src="assets\email.png">
+      <img class="more_img" src=".\assets\email.png">
       <p class="more_p">Email Address</p>
       <p class="more_p">hphker@hphk.kr</p>
     </samp>
     <samp class="more_p">
-      <img class="more_img" src="assets\telephone.png">
+      <img class="more_img" src=".\assets\telephone.png">
       <p class="more_p">phone Number</p>
       <p class="more_p">010-1234-5678</p>
     </samp>
     <samp class="more_p">
-      <img class="more_img"src="assets\location.png">
+      <img class="more_img"src=".\assets\location.png">
       <p class="more_p">Location</p>
       <p class="more_p">서울특별시</p>
     </samp>
     <samp class="more_p">
-      <img class="more_img"src="assets\clock.png">
+      <img class="more_img"src=".\assets\clock.png">
       <p class="more_p">Working Hours</p>
       <p class="more_p">9am~6pm</p>
     </samp>
