--- a/web/913/03_community.html
+++ b/web/913/03_community.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./02_home.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./03_community.html">Community</a>
@@ -61,7 +61,7 @@
       </div>
     </div>
     <h2 class="text-center m-5">Community</h2>
-    <div class="container">
+    <div class="container position-relative">
       <div class="row">
       <div class="col-lg-2">
         <ul class="list-group">
@@ -152,8 +152,8 @@
         </table>
       </div>
     </div>
-  </div>
-  </div>
+  
+  
     <nav aria-label="..." class="mt-3">
       <ul class="pagination justify-content-center">
         <li class="page-item disabled">
@@ -169,6 +169,9 @@
         </li>
       </ul>
     </nav>
+    <a class="btn btn-primary position-absolute bottom-0 end-0 mx-3" href="./04_form.html" role="button">글 작성하기</a>
+  </div>
+    
     <footer class="fixed-bottom  text-center bg-light">2022.09.13</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
