--- a/web/913/08_vedio.html
+++ b/web/913/08_vedio.html
@@ -60,6 +60,72 @@
         </div>
       </div>
     </div>
+    <div class="container d-flex pb-5"style="padding: 10ex;">
+      <div class="row">
+      <div class="col-md-4">
+      <img src="./images/movie1.jpg" class="card-img-top img-fluid" alt="쇼생크 탈출">
+      </div>
+      <div class="col-md-8">
+      <div class="">
+        <h1 >쇼생크 탈출</h1>
+        <h6>1994</h6>
+        <div class="d-flex fiex">
+          <div >
+            <div class="d-flex">
+              <h6 class="opacity-25 ">개봉</h6><h6 class="mx-2">1995.02.04</h6>
+            </div>
+            <div class="d-flex">
+              <h6 class="opacity-25 ">장르</h6><h6 class="mx-2">1995.02.04</h6>
+            </div>
+            <div class="d-flex">
+              <h6 class="opacity-25 ">등급</h6><h6 class="mx-2">1995.02.04</h6>
+            </div>
+            <div class="d-flex">
+              <h6 class="opacity-25 ">러닝타임</h6><h6 class="mx-2">1995.02.04</h6>
+            </div> 
+          </div>
+          <div>
+            <div class="d-flex">
+              <h6 class="opacity-25 ">평점</h6><h6 class="mx-2">1995.02.04</h6>
+            </div>
+            <div class="d-flex">
+              <h6 class="opacity-25 ">누적관객수</h6><h6 class="mx-2">1995.02.04</h6>
+            </div>
+          </div> 
+        </div>
+        </div>
+        <div class="mt-3">
+          <a type="button" class="btn btn-outline-secondary me-2"  href="https://watcha.com/ko-KR/contents/mNdKBkO" role="button">왓챠</a>
+          <a type="button" class="btn btn-outline-secondary me-2"  href="https://www.netflix.com/title/70005379" role="button">넷플릭스</a>
+          <a type="button" class="btn btn-outline-secondary me-2"  href="https://www.wavve.com/player/movie?movieid=MV_CD01_WR0000011371" role="button">웨이브</a>
+        </div>   
+      </div>
+      </div>
+    </div>
+    <div class="container py-5" style="padding: 10ex;">
+      <ul class="nav p-3 bg-light align-content-center" style="padding: 5ex; height: 3rem;">
+        <li class="nav-item">
+          <a class="nav-link text-black p-0 pe-4" href="./05_movie.html">정보</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-black p-0 pe-4" href="./07_directer.html">제작</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-black p-0 pe-4" href="./08_vedio.html">영상</a>
+        </li>
+      </ul>
+      <div class="my-5 gy-3 row justify-content-around flex-wrap">
+        <div class="col-lg-4">
+          <iframe src="https://www.youtube.com/embed/Do0slRSdnVM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-4">
+          <iframe src="https://www.youtube.com/embed/8ecTKUtmsiI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-4">  
+          <iframe src="https://www.youtube.com/embed/bAWvR2ulCJ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
     
     <footer class="fixed-bottom  text-center bg-light">2022.09.13</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
