--- a/web/913/index.html
+++ b/web/913/index.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./02_home.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./03_community.html">Community</a>
@@ -92,13 +92,15 @@
       <h2 class="text-center my-5">Boxoffice</h2>
       <div class="row gy-3 justify-content-center">
         <div class="col-12 col-md-6 col-lg-4">
-          <div class="card p-0">
-            <img src="./images/movie1.jpg" class="card-img-top" alt="쇼생크 탈출">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="./05_movie.html" class="text-decoration-none text-black">
+            <div class="card p-0">
+              <img src="./images/movie1.jpg" class="card-img-top" alt="쇼생크 탈출">
+              <div class="card-body">
+                <h5 class="card-title ">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> 
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card p-0">
